Update video url

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <div id="container">
-        <iframe id="player" src="https://www.youtube-nocookie.com/embed/5qap5aO4i9A"
+        <iframe id="player" src="https://www.youtube-nocookie.com/embed/jfKfPfyJRdk"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
